# rsdx

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  LICENSE.md  Makefile  README.md  _config.yml  common.mk  config.py  examples.mk  glossary.md  headers.txt  index.md  links.md  pyproject.toml  requirements.txt
.dvc/: config
00_script/: index.md  invperc.py
01_grid/: grid.py  index.md  invperc.py
01_intro/: index.md
01_script/: index.md
02_grid/: grid_01.py  grid_03.py  grid_04.py  index.md
02_parse/: index.md  parse.py
02_perf/: grid.py  grid_array.py  index.md  invperc.py
03_flow/: analysis.py  grid_generic.py  index.md
03_lazy/: grid.py  grid_lazy.py  grid_list.py  index.md  invperc.py  lazy.py
03_parse/: 003805_indented_table.csv  003805_quoted_id.csv  index.md  parse_02.py  parse_03.py  parse_04.py  parse_05.py
03_perf/: index.md
03_plugin/: display.py  index.md  plugins.json
03_test/: grid.py  index.md  test_01.py  test_02.py  test_03.py  test_05.py
04_cleanup/: index.md  invperc.py  test_grid_mock.py
04_flow/: index.md
04_lazy/: flow.py  index.md  invperc.py
04_test/: index.md
05_dim/: grid.py  grid_generic.py  index.md  invperc.py
05_lazy/: index.md
05_perf/: index.md
05_synth/: index.md  params_02.py  specimens_01.py  specimens_02.py  test_params_01.py  test_specimens_01.py
06_density/: .gitignore  analysis.py  flow.py  index.md  invperc.py  results_501_100_100_1729383.csv.dvc  runs_501_100_100_1729383.csv.dvc  runs_501_10_100_987456.csv  runs_501_10_100_987456.csv.dvc
06_dim/: index.md
06_scale/: Makefile  index.md  short.json  sweep.json
06_scenario/: assays.py  grid.py  index.md  machines.py  params.py  persons.py  scenario.py  specimens.py  utils.py
07_center/: analyze.py  display.py  generate.csv  generate.py  index.md  samples.db
07_db/: make_db.py
07_density/: index.md  invperc.py
07_prod/: index.md
08_center/: index.md
08_mutate/: analyze.py  index.md  synthesize_genomes.py
08_parse/: index.md
09_parse/: generate.py  index.md  parse.py
09_search/: fetch_bib_data.py  index.md
10_lims/: Makefile  assay_params.py  index.md  lims.py  lims_perms.tbl  lint.py  person.json  test_initial.json
11_site/: index.md
12_scrape/: find.out  find_in_page.py  index.md  medium.out  medium.sh  small.html
13_serve/: index.md  model.py
14_finale/: Makefile  index.md
97_db/: make_db.py
98_viewer/: .gitignore  README.md  app.py
99_finale/: index.md
_includes/: head.html  title.html  toc.html
_layouts/: default.html
bibliography/: index.md
data/: .gitignore  assay.db  assays.db  genomes.json  snails.csv  survey.db  survey.sql
docs/: glossary.html  (+10 more)
src/package/: .gitignore  LICENSE.md  Makefile  index.md  mccole.yml  pyproject.toml  slides.md
src/package/invperc/: __init__.py  __main__.py  grid.py
(+1885 files in other folders)
