[project]
name = "rsdx"
version = "0.1.28"
requires-python = ">=3.12"
dependencies = [
    "faker",
    "fastapi",
    "html5validator",
    "jinja2",
    "mccole",
    "numpy",
    "polars",
    "pytest",
    "ruff",
    "uvicorn"
]

[tool.ruff.lint]
ignore = ["E731"]

[tool.ruff.lint.extend-per-file-ignores]
"**/test_*.py" = ["F401", "F811"] # ignore complaints about unused imports for fixtures

[tool.mccole]
skips = ["CONTRIBUTING.md", "old", "templates"]

[tool.mccole.renames]
"README.md" = ""
"CODE_OF_CONDUCT.md" = "conduct"
"LICENSE.md" = "license"
"bibliography.md" = "bibliography"
"glossary.md" = "glossary"

[tool.uv.workspace]
members = ["rsdx"]
