[project]
name = "rsdx"
description = "software design for self-taught research programmers"
version = "0.1.28"
requires-python = ">=3.12"
dependencies = [
    "faker",
    "fastapi",
    "html5validator",
    "jinja2",
    "mccole",
    "numpy",
    "polars",
    "pytest",
    "ruff",
    "uvicorn"
]

[tool.ruff.lint]
ignore = ["E731"]

[tool.ruff.lint.extend-per-file-ignores]
"**/test_*.py" = ["F401", "F811"] # ignore complaints about unused imports for fixtures

[tool.mccole]
skips = [
    "98_viewer/.gitignore",
    "98_viewer/static/*",
    "98_viewer/templates/*",
    "*.csv",
    "*.db",
    "*.mk",
    "*.out",
    "*.py",
    "*.sh",
    "*.txt",
    "*.yml",
    "old/**",
    "uv.lock"
]

[tool.mccole.renames]
"README.md" = ""
"CODE_OF_CONDUCT.md" = "conduct"
"CONTRIBUTING.md" = "contrib"
"LICENSE.md" = "license"

[tool.uv.workspace]
members = ["rsdx"]
